--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -204,3 +204,13 @@ html,body{
 	bottom:60px;
 	width: 100%;
 }
+.nav{
+  position: absolute;
+  z-index: 1000;
+  right:10px;
+  top:10px;
+  cursor: pointer;
+}
+.nav .username{
+  color:#241CC7;
+}
