--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -81,7 +81,7 @@ html,body{
   width: 100%;
   margin: 4% 0 0 0px;
   padding: 1px 0 0 38px;
-  background: url(../resources/image/smonkey.png) no-repeat left center;
+  background: url(../image/smonkey.png) no-repeat left center;
   background-size: 30px;
   color: #FF2B2B;
   font-size: 12px;
@@ -92,7 +92,7 @@ html,body{
   width: 100%;
   margin: 60px 0 0 28px;
   padding: 55px 0 55px 56px;
-  background: url(../resources/image/smonkey.png) no-repeat left center;
+  background: url(../image/smonkey.png) no-repeat left center;
   background-size: 50px;
   color: #FF2B2B;
 	font-size: 16px;
@@ -108,7 +108,7 @@ html,body{
 	width: 100%;
   margin: 60px 0 0 28px;
   padding: 55px 0 55px 56px;
-  background: url(../resources/image/smonkey.png) no-repeat left center;
+  background: url(../image/smonkey.png) no-repeat left center;
   background-size: 50px;
   color: #FF2B2B;
 	font-size: 16px;
@@ -119,7 +119,7 @@ html,body{
 	height: 126px;
 	margin:70px auto;
 	padding:0;
-	background: url(../resources/image/sred.png) no-repeat center center;
+	background: url(../image/sred.png) no-repeat center center;
 	background-size: cover;
 	position: relative;
 }
@@ -158,9 +158,9 @@ html,body{
   -webkit-transform: rotateX(0) rotateY(0) rotateZ(0);
      -moz-transform: rotateX(0) rotateY(0) rotateZ(0);
           transform: rotateX(0) rotateY(0) rotateZ(0);
-  -webkit-animation: run 10ms infinite linear;
-   -moz-animation: run 1s infinite linear;
-      animation: run 300ms infinite linear;
+  -webkit-animation: run 500ms infinite linear;
+   -moz-animation: run 500ms infinite linear;
+      animation: run 500ms infinite linear;
 }
 
 
@@ -212,5 +212,13 @@ html,body{
   cursor: pointer;
 }
 .nav .username{
-  color:#241CC7;
+  color: #fff;
+    border-radius: 100px;
+    background: #FF5E5E;
+    /* border: 1px solid; */
+    width: 30px;
+    height: 30px;
+    display: block;
+    text-align: center;
+    line-height: 30px;
 }
