--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -13,7 +13,11 @@ html,body{
 	height: 100%;
 	overflow: hidden;
 }
-
+.imgBg{
+	position:absolute;
+	z-index:2;
+	opacity:.5;
+}
 .wrap{
 	width: 100%;
 	height: 100%;
@@ -79,8 +83,8 @@ html,body{
 
 .tips {
   width: 100%;
-  margin: 4% 0 0 0px;
-  padding: 1px 0 0 38px;
+  margin: 14% 0 0 0px;
+    padding: 5px 0 0 38px;
   background: url(../image/smonkey.png) no-repeat left center;
   background-size: 30px;
   color: #FF2B2B;
@@ -90,8 +94,8 @@ html,body{
 /*shake*/
 .tips1{
   width: 100%;
-  margin: 60px 0 0 28px;
-  padding: 55px 0 55px 56px;
+  margin: 60px 0 0 14%;
+  padding: 55px 0 55px 26%;
   background: url(../image/smonkey.png) no-repeat left center;
   background-size: 50px;
   color: #FF2B2B;
@@ -105,15 +109,18 @@ html,body{
 }
 
 .tips2{
-	width: 100%;
-  margin: 60px 0 0 28px;
-  padding: 55px 0 55px 56px;
-  background: url(../image/smonkey.png) no-repeat left center;
-  background-size: 50px;
-  color: #FF2B2B;
-	font-size: 16px;
+    width: 100%;
+    margin: 38px 0 0 14%;
+    padding: 55px 0 55px 24%;
+    background: url(../image/smonkey.png) no-repeat left center;
+    background-size: 46px;
+    color: #FF2B2B;
+    font-size: 16px;
 }
-
+.ptip{
+	font-weight: bold;
+    line-height: 36px;
+}
 .redPackage{
 	width: 200px;
 	height: 126px;
@@ -211,14 +218,45 @@ html,body{
   top:10px;
   cursor: pointer;
 }
+
 .nav .username{
   color: #fff;
-    border-radius: 100px;
-    background: #FF5E5E;
-    /* border: 1px solid; */
-    width: 30px;
-    height: 30px;
-    display: block;
-    text-align: center;
-    line-height: 30px;
+  border-radius: 100px;
+  background: #FF5E5E;
+  width: 50px;
+  height: 30px;
+  display: block;
+  text-align: center;
+  line-height: 30px;
+}
+.leaf > img{
+	position:absolute;
+	left:1%;
+	top:1%;
+	z-index:100;
+	width:30px
+}
+.leaf > img:nth-child(1){
+	left: 16%;
+    top: 10%;
+}
+.leaf > img:nth-child(2){
+	left: 79%;
+    top: 28%;
+}
+.leaf > img:nth-child(3){
+	left: 65%;
+    top: 54%;
+}
+.leaf > img:nth-child(4){
+	left: 12%;
+    top: 35%;
+}
+.leaf > img:nth-child(5){
+	left: 25%;
+    top: 46%;
+}
+.leaf > img:nth-child(5){
+	left: 25%;
+    top: 46%;
 }
