--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -1,22 +1,24 @@
 *{
 	margin: 0;
 	padding: 0;
-	font-family: "Î¢ÈíÑÅºÚ";
-	box-sizing: border-box;
+	font-family: "å¾®è½¯é›…é»‘";
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  -o-box-sizing: border-box;
+  -ms-box-sizing: border-box;
+  box-sizing: border-box;
+  list-style: none;
+  outline: none;
+  -webkit-highlight: none;
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 } 
 
 ul,li{
-  	list-style: none;
+  list-style: none;
 }
-
 html,body{
-	height: 100%;
-	overflow: hidden;
-}
-.imgBg{
-	position:absolute;
-	z-index:2;
-	opacity:.5;
+  height: 100%;
+  overflow: hidden;
 }
 .wrap{
 	width: 100%;
@@ -25,11 +27,29 @@ html,body{
 }
 
 .header >img{
-	width: 113%;
-	position: fixed;
-	top: -20%;
+  width: 100%;
+  position: fixed;
+  top: -20%;
 }
 
+.header-div{
+    position: absolute;
+    left: 0;
+    top: 30px;
+    width: 100%;
+    text-align: center;
+}
+.header-div h1{
+  color: #d80611;
+  font-size: 40px;
+  letter-spacing: 5px;
+}
+.header-h1:before{
+    content: "";
+    padding: 14px 45px;
+    background: url(../img/w2016.png) no-repeat 5px 20px;
+    background-size: 80px;
+}
 .footer >img{
 	width: 100%;
 	position: fixed;
@@ -37,226 +57,279 @@ html,body{
 }
 
 .content >img{
-  width: 80%;
-  left: 10%;
-  top: 9%;
+  width: 472px;
+  left: 50%;
+  top: 15%;
+  margin-left: -236px;
   position: fixed;
 }
 
 .content >p{
-  width: 80%;
-  left: 10%;
-  text-align: center;
-  color: #fff;
-  bottom: 18px;
+  width: 169px;
+  left: 50%;
+	top: 66%;
+  margin-left: -85px;
   position: fixed;
   font-size: 18px;
 }
 
-.form{
-	width: 100%;
-	height: 45%;
-	padding: 0 10%;
-	position: absolute;
-	top: 42%
+.content >h1{
+  width: 290px;
+  left: 50%;
+  top: 70%;
+  margin-left: -142px;
+  position: fixed;
 }
 
-.form>input {
-  width: 100%;
-  padding: 10px 30px;
-  margin-top: 20px;
-  border:1px solid rgba(146,105,103,1);
-  border-radius: 5px;
-}
-
-.form>input[type=button]{
-	width: 70%;
-  padding: 10px 0px;
-  background: #FF2B2B;
-  border: none;
-  border-radius: 5px;
-  color: #fff;
-  font-size: 16px;
-  letter-spacing: 8px;
-  margin: 17% 0 0 15%;
-}
-
-.tips {
-  width: 100%;
-  margin: 14% 0 0 0px;
-    padding: 5px 0 0 38px;
-  background: url(../image/smonkey.png) no-repeat left center;
-  background-size: 30px;
-  color: #FF2B2B;
-  font-size: 12px;
-}
-
-/*shake*/
-.tips1{
-  width: 100%;
-  margin: 60px 0 0 14%;
-  padding: 55px 0 55px 26%;
-  background: url(../image/smonkey.png) no-repeat left center;
-  background-size: 50px;
-  color: #FF2B2B;
-	font-size: 16px;
-}
-
-.sshake{
-	margin-top: 35%;
-  z-index: 100;
-  width: 100% !important
-}
-
-.tips2{
-    width: 100%;
-    margin: 38px 0 0 14%;
-    padding: 55px 0 55px 24%;
-    background: url(../image/smonkey.png) no-repeat left center;
-    background-size: 46px;
-    color: #FF2B2B;
-    font-size: 16px;
-}
-.ptip{
-	font-weight: bold;
-    line-height: 36px;
-}
-.redPackage{
-	width: 200px;
-	height: 126px;
-	margin:70px auto;
-	padding:0;
-	background: url(../image/sred.png) no-repeat center center;
-	background-size: cover;
-	position: relative;
-}
-
-.redPackage .prize,.redPackage .money{
-	position: absolute;
-	text-align: center;
-	width: 100%;
-	color:RGB(250,253,162);
-  text-shadow: 2px 2px 0px #D41D1E;
-}
-
-.redPackage .prize{
-	top:50px;
-	font-size: 18px;
-}
-
-.redPackage .money{
-  bottom: 25px;
-  font-size: 25px;
-  line-height: 20px;
-}
-
-.hidden{
-	display: none;
-}
-
-.shake{
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:400px;
-  -webkit-transform-style: preserve-3d;
-  -moz-transform-style: preserve-3d;
-  transform-style: preserve-3d;
-  -webkit-transform: rotateX(0) rotateY(0) rotateZ(0);
-     -moz-transform: rotateX(0) rotateY(0) rotateZ(0);
-          transform: rotateX(0) rotateY(0) rotateZ(0);
-  -webkit-animation: run 500ms infinite linear;
-   -moz-animation: run 500ms infinite linear;
-      animation: run 500ms infinite linear;
-}
-
-
-@-webkit-keyframes run {
-  0% {   -webkit-transform:rotateX(0) rotateY(0) rotatez(0) ;}
-  25% {  -webkit-transform:rotateX(0deg)  rotateY(0deg) rotatez(10deg) ; }
-  50% {  -webkit-transform:rotateX(0deg)  rotateY(0deg) rotatez(0) ; }
-  75% {  -webkit-transform:rotateX(-0deg)  rotateY(-0deg) rotatez(-10deg) ; }
-  100% { -webkit-transform:rotateX(0deg)  rotateY(0) rotatez(0) ; }
-
-}
-@-moz-keyframes run {
-  0% {   -moz-transform:rotateX(0) rotateY(0) rotatez(0) ;}
-  25% {  -moz-transform:rotateX(0deg)  rotateY(0deg) rotatez(10deg) ; }
-  50% {  -moz-transform:rotateX(0deg)  rotateY(0deg) rotatez(0) ; }
-  75% {  -moz-transform:rotateX(-0deg)  rotateY(-0deg) rotatez(-10deg) ; }
-  100% { -moz-transform:rotateX(0deg)  rotateY(0) rotatez(0) ; }
-}
-@-ms-keyframes run {
-  0% {   -ms-transform:rotateX(0) rotateY(0) rotatez(0) ;}
-  25% {  -ms-transform:rotateX(0deg)  rotateY(0deg) rotatez(10deg) ; }
-  50% {  -ms-transform:rotateX(0deg)  rotateY(0deg) rotatez(0) ; }
-  75% {  -ms-transform:rotateX(-0deg)  rotateY(-0deg) rotatez(-10deg) ; }
-  100% { -ms-transform:rotateX(0deg)  rotateY(0) rotatez(0) ; }
-}
-
-.form>button{
-  width: 70%;
-  padding: 8px 0px;
-  background: #FF2B2B;
-  border:none;
-  border-radius: 5px;
-  color: #fff;
-  font-size: 16px;
-  letter-spacing: 8px;
-  margin: 30px 0 0 15%;
-}
-
-.btns{
-	position: absolute;
-	bottom:60px;
-	width: 100%;
-}
-.nav{
-  position: absolute;
-  z-index: 1000;
-  right:10px;
-  top:10px;
-  cursor: pointer;
-}
-
-.nav .username{
-  color: #fff;
+.btn-s{
+  width: 162px;
+  height: 40px;
+  color: rgba(210,2,0,1);
+  border: 2px solid rgba(210,2,0,1);
   border-radius: 100px;
-  background: #FF5E5E;
-  width: 50px;
-  height: 30px;
-  display: block;
+  position: fixed;
+  font-size: 21px;
+  text-align: center;
+  line-height: 36px;
+  top: 80%;
+  left: 50%;
+  margin-left: -81px;
+}
+
+/*xq*/
+
+p.subTitle{
+  color: #fff;
+  left: 91.7%;
+  bottom: 75px;
+}
+
+h1.title{
+  color: #fff;
+  left: 88%;
+  bottom: 20px;
+}
+
+img.titleImg{
+  width: 80px;
+  top: 30px;
+  left: 60%;
+}
+
+.luckyPerson{
+  width: 80%;
+  height: 500px;
+  position: absolute;
+  background: rgba(255,255,255,.6);
+  top: 100px;
+  left: 10%;
+  padding: 40px 0 0 63px;
+}
+
+.luckyPerson>div{
+  width: 100%;
+  float: left;
+  height: 100px;
+  color: #d80611;
+}
+
+.luckyPerson>div>ul{
+  width:100%;
+}
+
+.luckyPerson>div>ul>li{
+  width: 120px;
+  height: 50px;
+  display: inline-block;
+  margin: 38px 0 0 38px;
+  background: rgba(255,255,255,.7);
+  text-align: center;
+}
+
+.luckyPerson>div>ul>li>p:nth-of-type(1){
+  color: #222;
+}
+
+.luckyPerson>div>ul>li>p:nth-of-type(2){
+  color: #fff;
+  background: #fe4542;
+  text-align: center;
+  width: 95px;
+  border-radius: 15px;
+  border: none;
+  margin-left: 13px;
+}
+
+div.btn-next{
+  width: 160px;
+  height: 40px;
+  color: rgba(210,2,0,1);
+  border: 1px solid rgba(210,2,0,1);
+  border-radius: 100px;
+  font-size: 21px;
   text-align: center;
   line-height: 30px;
+  margin: 40px 0 0 79%;
+  cursor: pointer;
+  padding: 5px 20px;
+  position: absolute;
+  bottom: 30px;
+  right: 40px;
 }
-.leaf > img{
-	position:absolute;
-	left:1%;
-	top:1%;
-	z-index:100;
-	width:30px
+
+/*LuckyList*/
+li{
+  list-style: none;
 }
-.leaf > img:nth-child(1){
-	left: 16%;
-    top: 10%;
+
+div.list{
+  background: rgba(255,255,255,0.5);
+  width: 84%;
+  height: 75%;
+  position: fixed;
+  bottom: 55px;
+  left: 50%;
+  margin-left: -42%;
+  padding: 80px 0 0 90px;
 }
-.leaf > img:nth-child(2){
-	left: 79%;
-    top: 28%;
+
+img.smallImg{
+  top: 7%;
+  left: 50%;
+  margin-left: -80px;
+  position: fixed;
+  width: 170px;
 }
-.leaf > img:nth-child(3){
-	left: 65%;
-    top: 54%;
+
+ul.listUl{
+  margin-top: 18px;
+  opacity: 1
 }
-.leaf > img:nth-child(4){
-	left: 12%;
-    top: 35%;
+
+.listUl >li{
+  width: 30%;
+  height: 40px;
+  font-size: 25px;
+  text-align: center;
+  display: inline-block;
 }
-.leaf > img:nth-child(5){
-	left: 25%;
-    top: 46%;
+
+.listUl >li >span{
+  display: inline-block;
+  margin-left: 30px;
+  text-align: left;
+  width: 106px;
+  overflow: hidden;
 }
-.leaf > img:nth-child(5){
-	left: 25%;
-    top: 46%;
+
+.footP{
+  width: 169px;
+  right: 24px;
+  bottom: 60px;
+  position: fixed;
+  font-size: 18px;
+  color: #fff;
+}
+
+.footH{
+  right: 20px;
+  bottom: 13px;
+  position: fixed;
+  color: #fff;
+  font-weight: normal;
+}
+
+/*zt*/
+.bubble{
+  position: absolute;
+  border-radius: 100%;
+  top:100%;
+  display: none;
+  background: #f6366d;
+  color:#fff;
+  box-sizing: border-box;
+  padding:10px 0;
+}
+
+.bubble .money,.bubble .number,.bubble .prize{
+    text-align: center;
+    height: 30%;
+    font-size: 35px;
+    font-weight: bold;
+}
+.bubble .number,.bubble .prize{
+  color:rgba(255,255,255,0.9);
+  font-size: 22px;
+}
+.bubble .money{
+  line-height: 41px;
+}
+.bubble .prize{
+  line-height: 66px;
+}
+.bubble .number{
+  line-height: 51px;
+}
+
+/*ljj*/
+.logo{
+    display: block;
+    text-decoration: none;
+    position: fixed;
+    bottom: -10px;
+    right: 15%;
+    width: 111px;
+    background: url("../img/logo.png") no-repeat center center;
+    height: 113px;
+    background-size: 90%;    
+  }
+  .logo:hover{
+    background: url("../img/logo2.png") no-repeat center center;
+    background-size: 100%;
+    bottom: -6px;
+  }
+      .conInput{
+      position: fixed;
+      top: 20%;
+      left: 45%;
+      width: 69%;
+      margin-left: -30%;
+      z-index: 1
+    }
+    .conInput >input{
+    width: 24%;
+    height: 40px;
+    border-radius: 5px;
+    padding-left: 10px;
+    margin-right: 20px;
+    border: 0px;
+    background: none;
+    box-shadow: #A9A9A9 2px 3px 6px;
+    }
+input::-webkit-input-placeholder {
+    color:    #000;
+}
+input:-moz-placeholder {
+    color:    #000;
+}
+.btnOk{
+    color: #fff;
+    width: 100px !important;
+    background-color: #FF4F4F !important;
+    padding-left: 0px !important;
+    cursor: pointer;
+}
+.conInput >input:hover{
+    background-color: #FFFFFF;
+    box-shadow: #828282 2px 3px 6px;
+}
+.btnOk:hover{
+  background-color: #F33A3A !important;
+}
+.dul{
+  margin-top: 35px;
+}
+.ran{
+  position: absolute;
+  left:110%;
 }
