--- a/src/main/webapp/resources/css/web_1.css
+++ b/src/main/webapp/resources/css/web_1.css
@@ -1,7 +1,7 @@
 *{
 	margin: 0;
 	padding: 0;
-	font-family: "å¾®è½¯é›…é»‘";
+	font-family: "Î¢ÈíÑÅºÚ";
   -moz-box-sizing: border-box;
   -webkit-box-sizing: border-box;
   -o-box-sizing: border-box;
@@ -48,7 +48,7 @@ html,body{
     content: "";
     padding: 14px 45px;
     background: url(../img/w2016.png) no-repeat 5px 20px;
-    background-size: 80px;
+    background-size: 20px;
 }
 .footer >img{
 	width: 100%;
@@ -183,10 +183,14 @@ li{
 }
 
 div.list{
-  background: rgba(255, 255, 255, 0.5) none repeat scroll 0% 0%;
-width: 100%;
-height: 75%;
-position: fixed;
+  background: rgba(255,255,255,0.5);
+  width: 84%;
+  height: 75%;
+  position: fixed;
+  bottom: 55px;
+  left: 50%;
+  margin-left: -42%;
+  padding: 0px 0 0 0px;
 }
 
 img.smallImg{
@@ -198,21 +202,19 @@ img.smallImg{
 }
 
 ul.listUl{
-  margin-top: 5px;
-  opacity: 1
+  margin-top: 0px;
+
 }
 
 .listUl >li{
-  height: 40px;
-font-size: 25px;
-text-align: center;
-float: left;
-margin-bottom: 66px;
-width: 20%;
-position:relative;
+  width: 30%;
+  height: 10px;
+  font-size: 25px;
+  text-align: center;
+  display: inline-block;
 }
 
-.listUl >li >span{
+.listUl >li >p{
   display: inline-block;
   margin-left: 30px;
   text-align: left;
@@ -222,27 +224,21 @@ position:relative;
 
 .footP{
   width: 169px;
-right: 42px;
-bottom: 13px;
-position: fixed;
-font-size: 10px;
-color: #FFF;
+  right: 24px;
+  bottom: 60px;
+  position: fixed;
+  font-size: 18px;
+  color: #fff;
 }
 
 .footH{
   right: 20px;
-bottom: 13px;
-position: fixed;
-color: #FFF;
-font-weight: normal;
-font-size: 10px;
+  bottom: 13px;
+  position: fixed;
+  color: #fff;
+  font-weight: normal;
 }
-.li-img{
-	width: 119px;
-position: absolute;
-left: 14px;
-top: 17px;
-}
+
 /*zt*/
 .bubble{
   position: absolute;
@@ -336,71 +332,4 @@ input:-moz-placeholder {
 .ran{
   position: absolute;
   left:110%;
-}
-.shake{
-  -webkit-transform-style: preserve-3d;
-  -moz-transform-style: preserve-3d;
-  transform-style: preserve-3d;
-  -webkit-transform: rotateX(0) rotateY(0) rotateZ(0);
-     -moz-transform: rotateX(0) rotateY(0) rotateZ(0);
-          transform: rotateX(0) rotateY(0) rotateZ(0);
-  -webkit-animation: run 500ms infinite linear;
-   -moz-animation: run 500ms infinite linear;
-      animation: run 500ms infinite linear;
-}
-
-
-@-webkit-keyframes run {
-  0% {   -webkit-transform:rotateX(0) rotateY(0) rotatez(0) ;}
-  25% {  -webkit-transform:rotateX(0deg)  rotateY(0deg) rotatez(10deg) ; }
-  50% {  -webkit-transform:rotateX(0deg)  rotateY(0deg) rotatez(0) ; }
-  75% {  -webkit-transform:rotateX(-0deg)  rotateY(-0deg) rotatez(-10deg) ; }
-  100% { -webkit-transform:rotateX(0deg)  rotateY(0) rotatez(0) ; }
-
-}
-@-moz-keyframes run {
-  0% {   -moz-transform:rotateX(0) rotateY(0) rotatez(0) ;}
-  25% {  -moz-transform:rotateX(0deg)  rotateY(0deg) rotatez(10deg) ; }
-  50% {  -moz-transform:rotateX(0deg)  rotateY(0deg) rotatez(0) ; }
-  75% {  -moz-transform:rotateX(-0deg)  rotateY(-0deg) rotatez(-10deg) ; }
-  100% { -moz-transform:rotateX(0deg)  rotateY(0) rotatez(0) ; }
-}
-@-ms-keyframes run {
-  0% {   -ms-transform:rotateX(0) rotateY(0) rotatez(0) ;}
-  25% {  -ms-transform:rotateX(0deg)  rotateY(0deg) rotatez(10deg) ; }
-  50% {  -ms-transform:rotateX(0deg)  rotateY(0deg) rotatez(0) ; }
-  75% {  -ms-transform:rotateX(-0deg)  rotateY(-0deg) rotatez(-10deg) ; }
-  100% { -ms-transform:rotateX(0deg)  rotateY(0) rotatez(0) ; }
-}
-.border-animate{
-  -webkit-animation: border 100ms infinite linear;
-   -moz-animation: border 100ms infinite linear;
-      animation: border 100ms infinite linear;
-      border: 5px dashed #CCC;
-width: 91%;
-margin: 0 auto;
-}
-@-webkit-keyframes border {
-	0% {
-		border:2px dashed #ccc;
-	},
-	100% {
-		border:1px dashed #ccc;
-	}
-}
-@-moz-keyframes border{
-	0% {
-		border:2px dashed #ccc;
-	},
-	100% {
-		border:1px dashed #ccc;
-	}
-}
-@-ms-keyframes border {
-	0% {
-		border:2px dashed #ccc;
-	},
-	100% {
-		border:1px dashed #ccc;
-	}
 }
