--- a/src/main/webapp/resources/wechat-showinfo/css/web.css
+++ b/src/main/webapp/resources/wechat-showinfo/css/web.css
@@ -29,7 +29,6 @@ html,body{
 .header >img{
   width: 100%;
   position: fixed;
-  top: -20%;
 }
 
 .header-div{
@@ -183,7 +182,6 @@ li{
 }
 
 div.list{
-  background: rgba(255, 255, 255, 0.5) none repeat scroll 0% 0%;
 width: 100%;
 height: 75%;
 position: fixed;
@@ -198,17 +196,18 @@ img.smallImg{
 }
 
 ul.listUl{
-  margin-top: 5px;
+  margin-top: 124px;
+  margin-left:102px;
   opacity: 1
 }
 
 .listUl >li{
-  height: 40px;
-font-size: 25px;
+  height: 0px;
+font-size: 19px;
 text-align: center;
 float: left;
-margin-bottom: 66px;
-width: 20%;
+margin-bottom: 75px;
+width: 17%;
 position:relative;
 }
 
@@ -238,10 +237,10 @@ font-weight: normal;
 font-size: 12px;
 }
 .li-img{
-	width: 119px;
+	 width: 64px;
 position: absolute;
-left: 14px;
-top: 17px;
+left: 18px;
+top: -2px;
 }
 /*zt*/
 .bubble{
@@ -403,4 +402,18 @@ margin: 0 auto;
 	100% {
 		border:1px dashed #ccc;
 	}
+}
+ul.martop-10{
+	margin-top:185px;
+}
+ul.martop-3{
+	margin-top:200px;
+}
+
+ul.martop-4{
+	margin-top:200px;
+}
+
+ul.martop-8{
+	margin-top:185px;
 }
